--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta property="og:title" content="Golden Melody Awards">
   <meta property="og:description" content="我只是一個音樂作品" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="preconnect" href="https://res.cloudinary.com" />
+  <link rel="dns-prefetch" href="https://res.cloudinary.com" />
   <title>GMA work</title>
 </head>
 
@@ -22,5 +25,7 @@
   body {
     height: calc(100vh - 64xpx);
     margin: 0;
+    /* 側欄開啟的偏移 */
+    padding-right: 0 !important;
   }
 </style>
