--- a/index.html
+++ b/index.html
@@ -31,3 +31,10 @@
     padding-right: 0 !important;
   }
 </style>
+<script>
+  (function (l) {
+    console.log(window.location)
+    // if (window.location.pathname !== '/')
+    //   window.location.href = window.location.pathname;
+  }(window.location))
+</script>
