--- a/404.html
+++ b/404.html
@@ -10,13 +10,12 @@
       // 獲取當前的 pathname
       let pathname = window.location.pathname;
       let href = window.location.href;
+      let l = window.location;
 
       // 如果 pathname 不是根目錄 '/'
       if (pathname !== '/') {
         // 使用 history.pushState 將使用者導向當前的 pathname
-        window.history.replaceState(null, null,
-          l.pathname.slice(0, -1) + decoded + l.hash
-        );
+        window.history.replaceState(null, null, pathname);
         console.log(l.pathname.slice(0, -1) + decoded + l.hash)
       } else {
         window.location.href = 'https://webkuma.github.io/GMA/';
