--- a/index.html
+++ b/index.html
@@ -33,8 +33,13 @@
 </style>
 <script>
   (function (l) {
-    console.log(window.location)
-    // if (window.location.pathname !== '/')
-    //   window.location.href = window.location.pathname;
+    if (l.search[1] === '/') {
+      var decoded = l.search.slice(1).split('&').map(function (s) {
+        return s.replace(/~and~/g, '&')
+      }).join('?');
+      window.history.replaceState(null, null,
+        l.pathname.slice(0, -1) + decoded + l.hash
+      );
+    }
   }(window.location))
 </script>
