style: update page layout colors

--- a/index.html
+++ b/index.html
@@ -12,9 +12,12 @@
   <link rel="preconnect" href="https://res.cloudinary.com" />
   <link rel="dns-prefetch" href="https://res.cloudinary.com" />
   <title>GMA work</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap"
+    rel="stylesheet">
 </head>
-
-<body class="bg-[#1b1b1b] bg-opacity-90 overflow-x-hidden overflow-y-auto min-w-[320px] max-w-full">
+<body class="bg-cg1 overflow-x-hidden overflow-y-auto min-w-[320px] max-w-full">
   <div id="app"></div>
   <script type="module" src="/src/main.js"></script>
 </body>
@@ -25,6 +28,7 @@
   body {
     height: calc(100vh - 64xpx);
     margin: 0;
+    font-family: Noto Serif, sans-serif, serif;
     /* 側欄開啟的偏移 */
     padding-right: 0 !important;
   }
